Add styles to the astronomy section

--- a/css/style.css
+++ b/css/style.css
@@ -345,3 +345,47 @@ figure {
 .article-footer-icon a {
 	color: black;
 }
+
+/* End Article 2 */
+
+/* Astronomy Section */
+.thumbnails {
+	/* display: flex; */
+	/* justify-content: space-between; */
+	padding-left: 3%;
+	padding-right: 3%;
+	max-width: 1200px;
+	background-color: red;
+}
+.thumbnails .astronomy {
+	max-width: 852px;
+}
+.thumbnails div.grid-container {
+	display: grid;
+	grid-template-columns: repeat(3 1fr);
+	gap: 10px;
+}
+.grid1 {
+	background-color: brown;
+}
+.grid2 {
+	background-color: yellow;
+}
+.grid3 {
+	background-color: orange;
+}
+.grid4 {
+	background-color: green;
+}
+.grid5 {
+	background-color: red;
+}
+.grid6 {
+	background-color: blue;
+}
+.most-popular {
+	margin-left: 900px;
+	max-width: 315px;
+}
+
+/*End Astronomy Section */
