--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 
 /* Navbar */
 
-nav {
+/* nav {
 	display: flex;
 	height: 50px;
 	width: 100%;
@@ -29,7 +29,7 @@ nav {
 	border: 2px solid yellow;
 	font-family: helvetica, arial, sans-serif;
 	box-sizing: border-box;
-}
+} */
 
 nav button {
 	margin: 0.9em;
@@ -477,7 +477,6 @@ figure {
 	margin: 15px 0;
 	text-decoration: none;
 	color: rgb(18, 18, 18);
-
 	font-size: 100%;
 }
 .astronomy a:hover {
@@ -486,21 +485,91 @@ figure {
 
 /*End Astronomy Section */
 
-footer div hr{
-color: #777777;
-line-height: 2px;
+/* Footer Section */
+footer {
+	width: 1200px;
+	margin: 20px 3%;
+}
+footer div hr {
+	color: #777777;
+	line-height: 2px;
+}
+.footer ul:nth-child(-n + 6) {
+	font-weight: bold;
+	color: #000000;
+	line-height: 1.6;
+}
+.footer .footer-nav-upper {
+	display: flex;
+	justify-content: space-between;
+	flex-flow: row nowrap;
+
+	/* align-items: center; */
+}
+.footer-nav-upper a {
+	color: #222222;
+	text-decoration: none;
+	font-weight: 300;
+	line-height: 1.6;
+}
+.footer-nav-upper a:hover {
+	font-size: 14px;
+	color: #333;
+	text-decoration: underline;
+}
+.footer .footer-list-lower {
+	display: flex;
+	justify-content: space-evenly;
+	flex-flow: row nowrap;
+	align-items: center;
+	font-size: 10px;
+}
+.footer-list-lower a {
+	text-decoration: none;
+	color: #666;
+	margin-left: 5px;
+	font-family: nyt-franklin, helvetica, arial, sans-serif;
+}
+.footer-list-lower a:hover {
+	text-decoration: underline;
+}
+.footer-nav-lower {
+	margin: 10px 50px;
 }
 
-
-.footer-logo{
-margin-left: 30px;
+.footer ul {
+	list-style-type: none;
 }
 
-.footer-logo p{
-  margin-top: -20px;
-  margin-left: 70rem;
+.footer-logo {
+	display: flex;
+	justify-content: space-between;
+
+	align-items: center;
 }
-.footer-logo p a{
-  text-decoration: none;
+.footer line {
+	position: relative;
+	margin-bottom: 15px;
+}
+.footer div a {
+	text-decoration: none;
+	font-size: 12px;
+	color: #666;
+	font-family: nyt-franklin, helvetica, arial, sans-serif;
+}
+footer .horizontal-line-1 {
+	border: 1px solid #cccccc;
+}
+footer .horizontal-line-2 {
+	border: 1px solid #dddddd;
+
+	/* position: absolute; */
+	left: 10px;
 }
 
+.footer-nav-upper .list-line {
+	border-left: 1px solid #dddddd;
+	padding-left: 10px;
+	/* transform: rotate(90deg); */
+}
+/* End footer section */
