--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,8 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html,
 body,
 div,
@@ -83,9 +88,14 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
+  font-weight: inherit;
+  font-family: inherit;
+  font-style: inherit;
+  font-variant: inherit;
   vertical-align: baseline;
 }
 
+/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -118,7 +128,7 @@ blockquote::before,
 blockquote::after,
 q::before,
 q::after {
-  content: '';
+  content: "";
   content: none;
 }
 
