--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* General styles */
 .text-mute {
   color: #888;
 }
@@ -19,7 +18,6 @@
   margin-left: 25px;
 }
 
-/* End General styles */
 .main-container {
   position: relative;
   width: 100%;
@@ -27,8 +25,6 @@
   background-color: rgb(255, 255, 255);
   color: black;
 }
-
-/* Navbar */
 
 .navbar-top {
   display: flex;
@@ -192,8 +188,6 @@ nav button {
   text-align: center;
 }
 
-/* End of Navbar */
-
 #hero {
   width: 960px;
   margin: 20px auto;
@@ -281,14 +275,11 @@ article p {
   vertical-align: baseline;
 }
 
-/* begining of the article section  */
 article {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
-
-  /* margin-left: 23rem; */
 }
 
 .article-footer {
@@ -385,8 +376,11 @@ article {
 
 .figure {
   position: relative;
-}
 
+}
+figure img{
+  width: 100%;
+}
 .fig-1 {
   position: absolute;
   left: 3px;
@@ -498,10 +492,6 @@ footer div hr {
   padding: 5px 0;
 }
 
-/* End Article 2 */
-
-/* Editors Pick */
-
 .editors-pick {
   position: absolute;
   max-width: 210px;
@@ -544,9 +534,6 @@ footer div hr {
   align-items: center;
 }
 
-/* End Editors Pick */
-
-/* Astronomy Section */
 .thumbnails {
   display: flex;
   justify-content: space-between;
@@ -592,8 +579,6 @@ footer div hr {
   font-size: 11px;
 }
 
-/* Most Popular aside */
-
 .most-popular h2 {
   margin: 15px 0;
 }
@@ -603,9 +588,6 @@ footer div hr {
   font-weight: bold;
 }
 
-/* End Astronomy Section */
-
-/* Footer Section */
 footer {
   width: 1200px;
   margin: 20px 3%;
@@ -657,7 +639,6 @@ footer .horizontal-line-1 {
 footer .horizontal-line-2 {
   border: 1px solid #ddd;
 
-  /* position: absolute; */
   left: 10px;
 }
 
@@ -696,7 +677,6 @@ footer .horizontal-line-2 {
   padding-left: 10px;
 }
 
-/* End footer section */
 .position {
   position: relative;
 }
